ingress-traefik-https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: magda-redirect
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
  routes:
    - match: Host(`magda.prism-rol.org`)
      kind: Rule
      services:
        - name: gateway # Requests will be forwarded to this service
          port: 80
      middlewares:
        - name: https-redirect
