ingress-traefik-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k3d-cluster
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - websecure
  routes:
    - match: Host(`k3d.localhost.org`)
      kind: Rule
      services:
        - name: gateway # Requests will be forwarded to this service
          port: 80
  tls:
    secretName: k3d-cluster
